changed to postgresql, added functions, volunteer deleted

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Shlyapnikova_lrContext": "Host=localhost;Port=5432;Database=studentdb;Username=postgres;Password=4251"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Shlyapnikova_lrContext": "Server=(localdb)\\mssqllocaldb;Database=Shlyapnikova_lrContext-504e8545-5da5-4416-8e32-e7845bac273f;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+
 }
